# protonshift

./: .gitignore  FEATURES.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  run.sh
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  codeql.yml
assets/: io.github.protonshift.desktop  io.github.protonshift.metainfo.xml
docs/: python-review.md
electron/: .pnpmfile.cjs  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.ts  python-runtime-requirements.txt  tsconfig.json
electron/renderer/: next.config.ts  package.json  tsconfig.json
electron/renderer/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
electron/renderer/src/components/: ambient-blobs.tsx  env-presets.tsx  game-compat-tool.tsx  game-detail-header.tsx  game-detail.tsx  game-known-fixes.tsx  game-launch-options.tsx  game-list.tsx  game-paths.tsx  game-prefix-details.tsx  game-profiles.tsx  game-protontricks.tsx  game-save-data.tsx  game-shader-cache.tsx  gamescope-builder.tsx  glow-card.tsx  heroic-toggles.tsx  mangohud-overlay-metrics.tsx  mangohud-presets.tsx  mangohud-value-field.tsx  nav-bar.tsx  page-shell.tsx  reveal-section.tsx  splash-screen.tsx  (+2 more)
electron/scripts/: vendor-python-deps.sh
flatpak/: io.github.protonshift.yml
src/game_setup_hub/: __init__.py  __main__.py  _vendor_compat.py  api.py  app.py  controllers.py  display.py  env_vars.py  fixes.py  fsutil.py  gamescope.py  gpu.py  heroic.py  heroic_config.py  logging_setup.py  lutris.py  mangohud.py  paths.py  prefix.py  presets.py  profiles_storage.py  protontricks.py  saves.py  shader_cache.py  steam.py  theme.css  tool_check.py  vdf_config.py
src/game_setup_hub/api/: __init__.py  __main__.py  _app.py  _helpers.py  _models.py  _state.py
src/game_setup_hub/data/: known_fixes.json
tests/: conftest.py  test_api_smoke.py  test_controllers.py  test_display.py  test_env_vars.py  test_fsutil.py  test_gamescope.py  test_paths.py  test_protontricks.py  test_tool_check.py  test_vdf_config.py  test_vendor_compat.py
(+22 files in other folders)
